adiciona build para tornar nova library instalavel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,18 @@
 [project]
-name = "sikuliplus"
+name = "SikuliPlusLibrary"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "robotframework>=7.3.2",
-    "robotframework-sikulilibrary>=2.0.5",
-]
+dependencies = ["robotframework>=7.3.2", "robotframework-sikulilibrary>=2.0.5"]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["source"]
+include = ["SikuliPlusLibrary*"]
 
 [tool.sikuliplus]
 similarity = 0.7
@@ -16,3 +21,11 @@ action_speed = 0.1
 highlight = true
 highlight_time = 2.0
 language = "pt_BR"
+
+[tool.uv.sources]
+sikulipluslibrary = { workspace = true }
+
+[dependency-groups]
+dev = [
+    "sikulipluslibrary",
+]
