--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,16 +3,20 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-include = ["src/SikuliPlusLibrary"]
+packages = ["src\\SikuliPlusLibrary"]
+include = ["src\\SikuliPlusLibrary"]
 
 [project]
 name = "robotframework-SikuliPlusLibrary"
-version = "0.1.1"
+version = "0.1.4"
 description = "A wrapper for robotframework-SikuliLibrary to be used with Robot Framework"
 readme = "README.md"
 requires-python = ">=3.13"
 authors = [{ name = "Leonardo Sextare", email = "leonardosextare@gmail.com" }]
-dependencies = ["robotframework>=7.0.0", "robotframework-sikulilibrary>=2.0.5"]
+dependencies = [
+    "robotframework>=7.0.0",
+    "robotframework-sikulilibrary>=2.0.3, <2.0.5",
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: Apache Software License",
@@ -24,7 +28,4 @@ Homepage = "https://github.com/LeonardoSextare/robotframework-SikuliPlusLibrary"
 Issues = "https://github.com/LeonardoSextare/robotframework-SikuliPlusLibrary/issues"
 
 [dependency-groups]
-dev = [
- "robotframework-robocop",
- "twine>=6.2.0",
-]
+dev = ["build>=1.3.0", "robotframework-robocop", "twine>=6.2.0"]
